test/typeerrors/ex13.golden
Building file ../test/typeerrors/ex13.act
  Compiling ex13.act for release

ERROR: Error when compiling ex13 module: Type error

  |
4 |actor Act(s:int,t:str):
  |          ^
Too many positional elements

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

